# pawn-appetit

./: .gitattributes  .gitignore  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  Dockerfile  LICHESS_SCRAPING_REPORT.md  README.md  SEARCH_OPTIMIZATION_SUMMARY.md  biome.json  commit-message.txt  fide-html-snippet.html  index.html  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  splash.html  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  translation.yml
.github/workflows/: build.yml  release.yml  test.yml  test_build.yml
.tauri/: dev.key  dev.key.pub
database/indexes/: puzzles_indexes.sql
database/migrations/: add_game_openings_table.sql
database/pragmas/: busy_timeout.sql  foreign_keys_on.sql  journal_mode_delete.sql  journal_mode_off.sql  performance_pragmas.sql
database/schema/: core_tables.sql  puzzles_tables.sql  supabase_telemetry.sql
database/seeds/: initial_data.sql
scripts/: add-opening-to-tsv.mjs  batch-scrape-openings.js  extract-openings-from-lichess.mjs  process-all-openings.mjs  process-lichess-openings-complete.mjs  process-lichess-openings.js  readme-updater.ts  scrape-lichess-openings-automated.ts  scrape-lichess-openings.ts  update-missing-translations.ts  update-readme.ts  update-version.ts
src/: App.tsx  i18n.ts  index.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/data/: a.tsv  b.tsv  c.tsv  d.tsv  e.tsv
src-tauri/icons/: icon.icns
src-tauri/src/: chess.rs  chess_bridge.rs  error.rs  fide.rs  fs.rs  lib.rs  main.rs  opening.rs  package_manager.rs  pgn.rs  puzzle.rs  sound.rs  telemetry.rs  variant_positions.rs
src-tauri/src/app/: mod.rs  setup.rs
src-tauri/src/app/platform/: mod.rs  shared.rs
src-tauri/src/app/platform/desktop/: linux.rs  macos.rs  migration.rs  mod.rs  windows.rs
src-tauri/src/app/platform/mobile/: android.rs  ios.rs  mod.rs
src-tauri/src/chess/: analysis.rs  commands.rs  evaluation.rs  manager.rs  mod.rs  process.rs  types.rs  uci.rs
src-tauri/src/db/: core.rs  encoding.rs  mod.rs  models.rs  ops.rs  pgn.rs  search.rs
src-tauri/src/engine/: analysis.rs  communication.rs  config.rs  debug.rs  diagnostics.rs  evaluation.rs  events.rs  manager.rs  mod.rs  process.rs  types.rs
src/__tests__/: chess.test.ts  chessops.test.ts  formatters.test.ts  misc.test.ts
src/bindings/: generated.ts  index.ts
src/chessground/: Chessground.tsx
src/components/: About.tsx  AnalysisPreview.tsx  BoardControlsMenu.tsx  ChartSizeGuard.tsx  Chessground.tsx  CollapsibleGameInfo.tsx  Comment.tsx  CompleteMoveCell.tsx  ContentEditable.tsx  ErrorComponent.tsx  EvalChart.tsx  EventMonitor.tsx  ForkChooser.css.ts  ForkChooser.tsx  GameInfo.css.ts  GameInfo.tsx  GameNotation.css.ts  GameNotation.tsx  GenericCard.css.ts  LocalImage.tsx  MoveCell.tsx  MoveControls.tsx  OpeningName.tsx  Piece.tsx  ProgressButtonWithOutState.tsx  ReportPreview.tsx  ResponsiveLoadingWrapper.tsx  ResponsiveSkeleton.tsx  ShowMaterial.tsx  SidePanelDrawerLayout.tsx  Sidebar.css.ts  Sidebar.tsx  TopBar.css.ts  TopBar.tsx  UpdateNotification.tsx  VirtualizedNotation.tsx
src/config/: index.ts
src/hooks/: useLanguageChangeListener.ts  useResponsiveLayout.ts  useTelemetry.ts  useVersionCheck.ts
src/routes/: __root.tsx  accounts.tsx  boards.tsx  engines.tsx  files.tsx  index.tsx  tournaments.tsx
src/services/: version-checker.ts
src/state/: atoms.ts  boardAtoms.ts  engineAtoms.ts  gameAtoms.ts  keybindings.ts  settingsAtoms.ts  uiAtoms.ts  userStatsStore.ts  utils.ts
src/styles/: Chessboard.css.ts  chessgroundBaseOverride.css  chessgroundColorsOverride.css  global.css.ts  theme.ts
src/translation/: am_AM.ts  ar_SA.ts  be_BY.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  hy_AM.ts  it_IT.ts  ja_JP.ts  nb_NO.ts  pl_PL.ts  pt_PT.ts  ru_RU.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts
src/utils/: achievements.ts  analyzedGames.ts  annotation.ts  applyUciMoveToFen.ts  checkmateDetection.ts  chess-engine.ts  chess.ts  chessops.ts  clock.ts  db.ts  (+38 more)
(+441 files in other folders)
